<resources>

    <string name="app_name">ilet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="kargolar_n_z_en_h_zl_ve_g_venli_ekilde_iletin">Kargolarınızı en hızlı ve güvenli şekilde iletin.</string>
    <string name="ye_ol">Üye ol</string>
    <string name="giri_yap">Giriş Yap</string>
    <string name="let_uygulamas">İlet Uygulaması</string>
    <string name="ana_sayfaya_ho_geldiniz">Ana sayfaya hoş geldiniz</string>
    <string name="giri_fragmenti">Giriş Fragmenti</string>
    <string name="let_uygulamas_logosu">İlet Uygulaması Logosu</string>
    <string name="let">İlet</string>
    <string name="oturum_a">Oturum Aç</string>
    <string name="parolan_z_m_unuttunuz">Parolanızı mı unuttunuz?</string>
    <string name="sim">İsim</string>
    <string name="e_posta">E-posta</string>
    <string name="kaydol">Kaydol</string>
    <string name="sonraki">Sonraki</string>
    <string name="telefon_numaran_z">Telefon Numaranız</string>
    <string name="_5071234569">5071234569</string>
    <string name="hesab_kurtar">Hesabı Kurtar</string>
    <string name="e_posta_kullan_c_ad_veya_telefon_numaras_girin">E-posta, kullanıcı adı veya telefon numarası girin</string>
    <string name="atla">Atla</string>
    <string name="g_nder">Gönder</string>
    <string name="di_er_kullan_c_lara_g_nderece_iniz_kargo_hakk_nda_bilgi_verin_ve_kargonuzu_iletsinler">Diğer kullanıcılara göndereceğiniz kargo hakkında bilgi verin ve kargonuzu iletsinler</string>
    <string name="talep">Talep</string>
    <string name="st_nokta">Üst Üç nokta</string>
    <string name="g_rsel_g_nder">Görsel Gönder</string>
    <string name="tekrar_ho_geldin">Tekrar Hoşgeldin</string>
    <string name="sen_de_il_misin">Sen değil misin?</string>
    <string name="kullan_c_smi">Kullanıcı İsmi</string>
    <string name="devam_et">Devam et</string>
    <string name="parola">Parola</string>
    <string name="sim_soyisim">İsim Soyisim</string>
    <string name="s_k_sorulan_sorular">Sık Sorulan Sorular</string>
    <string name="sss">SSS</string>
    <string name="bu_uygulama_gizlili_imi_nas_l_koruyor">Bu uygulama gizliliğimi nasıl koruyor?</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content_of_a_page_when_looking_at_its_layout_the_point_of_using_lorem_ipsum_is_that_it_has_a_more_or_less_normal_distribution_of_letters">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</string>
    <string name="buraya_expandable_recyclerview_tarz_nda_bir_ey_ayp_lacak">Buraya Expandable RecyclerView tarzında birşey aypılacak</string>
    <string name="gp">GP</string>
    <string name="gizlilik_poliitikasi">Gizlilik Poliitikasi</string>
    <string name="t_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content_of_a_page_when_looking_at_its_layout_the_point_of_using_lorem_ipsum_is_that_it_has_a_more_or_less_normal_distribution_of_letters">t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</string>
    <string name="kabul_et">Kabul Et</string>
    <string name="reddet">Reddet</string>
    <string name="k">KŞ</string>
    <string name="kullan_m_artlar">Kullanım Şartları</string>
    <string name="profili_d_zenle">Profili Düzenle</string>
    <string name="de_i_iklikleri_kaydet">Değişiklikleri Kaydet</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="profil_foto_raf">Profil Fotoğrafı</string>
    <string name="altl_k">Altlık</string>
    <string name="hesab_dondur">Hesabı Dondur</string>
    <string name="_2fa">2FA</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="gizlilik_politikas">Gizlilik Politikası</string>
    <string name="parmak_zi">Parmak İzi</string>
    <string name="let_hakk_nda">İlet Hakkında</string>
    <string name="gizli_hesap">Gizli Hesap</string>
    <string name="ifre">Şifre</string>
    <string name="_3_saatlik_gezi">3 Saatlik Gezi</string>
    <string name="_2335_km">2335 km</string>
    <string name="nceki_geziler">Önceki Geziler</string>
    <string name="u_ak_simgesi">Uçak Simgesi</string>
    <string name="var_noktas_simgesi">Varış noktası Simgesi</string>
    <string name="karab_k">Karabük</string>
    <string name="serkan">Serkan</string>
    <string name="toplam_mesafe">Toplam Mesafe</string>
    <string name="son_12_ayda_yapt_geziler">Son 12 ayda yaptığı geziler</string>
    <string name="_20_ubat_2021">20 Şubat 2021</string>
    <string name="bursa">BURSA</string>
    <string name="sonraki_hedef">Sonraki Hedef</string>
    <string name="aydin">AYDIN</string>
    <string name="yolunda">YOLUNDA</string>
    <string name="d_zenle">Düzenle</string>
    <string name="ticket_arkaplan">Ticket Arkaplan</string>
    <string name="k_noktasi_simgesi">Çıkış Noktasi Simgesi</string>
    <string name="kullan_c_y_ld_zlar">Kullanıcı Yıldızları</string>co
    <string name="let_logo">İlet Logo</string>
    <string name="g_nderici_lanlar">Gönderici İlanları</string>
    <string name="bir_ehrin_ad_n_girin">Bir şehrin adını girin.</string>
    <string name="isparta">ISPARTA</string>
    <string name="esra">Esra</string>
    <string name="_12_saat">12 Saat</string>
    <string name="_25_ubat_2021">25 Şubat 2021</string>
    <string name="konum">Konum</string>
    <string name="kullan_c_profil_foto_raf">Kullanıcı Profil Fotoğrafı</string>
    <string name="nokta">Üç Nokta</string>
    <string name="araba_conu_beyaz">Araba İconu Beyaz</string>
    <string name="ticket_arkas_g_rseli">Ticket arkası görseli</string>
    <string name="gezini_ekleyelim">Gezini Ekleyelim</string>
    <string name="nereye">Nereye</string>
    <string name="nereden">Nereden</string>
    <string name="ba_lang_konumunuz">Başlangıç konumunuz</string>
    <string name="biti_konumunuz">Bitiş Konumunuz</string>
    <string name="var_iconu">Varış iconu</string>
    <string name="ba_lang_iconu">Başlangıç iconu</string>
    <string name="tahmini_s_re">Tahmini Süre</string>
    <string name="tatil">Tatil</string>
    <string name="gezi_t_r">Gezi Türü</string>
    <string name="is">İş</string>
    <string name="ta_nma">Taşınma</string>
    <string name="dosya">Dosya</string>
    <string name="kargo_t_r">Kargo Türü</string>
    <string name="koli">Koli</string>
    <string name="tarih">Tarih</string>
    <string name="cikis">Çıkış</string>
    <string name="varis">Varış</string>
    <string name="arac">Araç</string>
    <string name="hangi_ara_ile_gideceksin">Hangi araç ile gideceksin</string>
    <string name="duraklar">Duraklar</string>
    <string name="adana">Adana</string>
    <string name="durak">Durak</string>
    <string name="name">Name</string>
    <string name="yolculu_unuz_s_ras_nda_durup_kargo_transferi_yapabilece_iniz_duraklar_ekleyebilirsiniz">Yolculuğunuz sırasında durup kargo transferi yapabileceğiniz durakları ekleyebilirsiniz.</string>
    <string name="ba_lang_konumu">Başlangıç konumu</string>
    <string name="hedef_konumu">Hedef Konumu</string>
    <string name="durak_ekleme">Durak Ekleme</string>
    <string name="mesaj_at">Mesaj At</string>
    <string name="merhaba_ben_s_la_zmir_den_bart_n_a_zel_arac_m_ile_gidiyorum_fazla_yerim_yok_k_k_boyutlarda_kargolar_n_z_iletebilirim">Merhaba ben Sıla İzmir\'den Bartın\'a özel aracım ile gidiyorum. Fazla yerim yok küçük boyutlarda kargolarınızı iletebilirim.</string>
    <string name="ba_lang">Başlangıç</string>
    <string name="lan_detay_arkaplan_g_rseli">İlan Detayı arkaplan görseli</string>
    <string name="lan_detay_profil_foto_raf">İlan Detay profil fotoğrafı</string>
    <string name="lan_detay_araba_iconu">İlan detay araba iconu</string>
    <string name="lan_detay_nokta">İlan detay üç nokta</string>
    <string name="lan_ekleme_butonu">İlan ekleme Butonu</string>
    <string name="e_posta_adresi">E-posta adresi</string>
</resources>